# Keybored

./: README.md
60%/: IDB60 PCB measurement.txt  IDB60.FCStd  IDB60.FCStd1  README
60%/IDB60 case design (WIP)/: case.FCStd  idb.FCStd
60%/QXP/: QXPPlate.dxf
65%/Kyuu-main/: README
75%/ID80/: id80_via (1).hex
75%/RE75 V2/: RE75 V2.json  介绍.txt  默认布局.json
Alice/: README
Alice/Acrylic Spring/: README  spring亚克力外壳.dwg  spring开槽钢板碳定.dwg
Alice/Basketweave/: README
Alice/Open Source Arisu/: README
Alice/Open Source Arisu/Case/: README
Alice/Open Source Arisu/PCB Design/: README
Alps/Apple AEK Alps build resources/: voyager60-aek-ansi.dxf  voyager60-aek-infinity.dxf  voyager60-aek-splitbs.dxf  voyager60-aek-splitrshift.dxf
JSON files/: bioi_s65_via.json
Topre/happy-hacking-gnu-master/: CMakeLists.txt  README.md  compile_flags.txt
Topre/happy-hacking-gnu-master/src/: functions.h  hidcomm.h  main.c
